change_pass_default

--- a/centos67-ks.cfg
+++ b/centos67-ks.cfg
@@ -12,7 +12,7 @@ keyboard us
 #network --onboot yes --bootproto dhcp --nameserver 8.8.8.8 --hostname database.localdomain
 #network --bootproto dhcp
 network --onboot yes --bootproto dhcp --nameserver 8.8.8.8
-rootpw  --iscrypted $1$JOUXmqrU$xn/x7c10oSnBfkuBltDxK0
+rootpw  --iscrypted $1$.0FWkw49$7SPAwQ5HxW5OgGauUHmUR/
 firewall --service=ssh
 authconfig --enableshadow --passalgo=sha512
 selinux --permissive
